# rust-blog

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml  openapi.json  requests.http
.local/: Dockerfile
.local/nginx/: nginx.conf
.local/prometheus/: prometheus.yml
.sqlx/: query-0dd6a0d5612bd44f15ba7548065078c015a4ce4b879b480774a63bdb40421ff6.json  query-39628fd3321ccc5e7850b828a0537442dd25516783a1b64cadcf47fbe37f8d8f.json  query-40a096a899715342ce91e67dad5735c13265239a2d7afc2a54e5b282a68c8c44.json  query-55b2f38bb4cde63bf1f8281b99b0c577cdaa8fb0f6ca4e4b4675079f1a1fc0a7.json  query-63fd9dfa7b58f60a1ad5b20a6d71d5d2c3dc7628bb643e04547405d5350512c2.json  query-9faec4c789a7b4b3d912267340856bd8dbdf177809928951202c3bf6b9845ef3.json  query-d0e303f285febf214c70c3ca63343cfe58a95fdf4cf6ec333610cee9574c58dc.json
apps/admin/: Dockerfile  orval.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
apps/admin/src/: Articles.tsx  Layout.tsx  Login.tsx  main.tsx
apps/admin/src/api/: blog.schemas.ts  blog.ts
apps/admin/src/components/ui/: data-table.tsx  skeleton-card.tsx
apps/admin/src/editor/: ToolbarPlugin.tsx
apps/admin/src/fake/: articles.tsx
apps/admin/src/lib/: date.ts
apps/admin/src/services/: auth.tsx
migrations/: 20250322000000_blog.sql
src/: auth.rs  blog.rs  errors.rs  logs.rs  main.rs  web.rs
src/auth/: github.rs  http.rs  redis.rs
src/blog/: http.rs  postgres.rs
src/web/: openapi.rs
tests/auth/: mod.rs  redis_repo_tests.rs
