[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
async-trait = "0.1.88"
bb8 = "0.9.0"
bb8-redis = "0.21.0"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
mockall = "0.13.1"
mockito = "1.7.0"
toml = "0.8.20"

[dev-dependencies]
testcontainers = "0.23.3"
